BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/WGC_Storico_Attivita__mdt.object-meta.xml
<CustomObject>
    <label>WGC Storico Attivita</label>
    <pluralLabel>WGC Storico Attivita</pluralLabel>
</CustomObject>