BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CAMPO_ESITO__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_ESITO__c</fullName>
    <label>CAMPO ESITO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>