BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CAMPO_FILTRO_DATA__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_FILTRO_DATA__c</fullName>
    <label>CAMPO FILTRO DATA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>