BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CAMPO_TRACKING_HISTORY__c.field-meta.xml
<CustomField>
    <fullName>CAMPO_TRACKING_HISTORY__c</fullName>
    <label>CAMPO TRACKING HISTORY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>