BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CHECK_CAMPO_ESITO__c.field-meta.xml
<CustomField>
    <fullName>CHECK_CAMPO_ESITO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHECK CAMPO ESITO</label>
    <type>Checkbox</type>
</CustomField>