BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CHECK_COINTESTAZIONI__c.field-meta.xml
<CustomField>
    <fullName>CHECK_COINTESTAZIONI__c</fullName>
    <defaultValue>true</defaultValue>
    <label>CHECK COINTESTAZIONI</label>
    <type>Checkbox</type>
</CustomField>