BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CHECK_RECORD_SPLIT__c.field-meta.xml
<CustomField>
    <fullName>CHECK_RECORD_SPLIT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CHECK RECORD SPLIT</label>
    <type>Checkbox</type>
</CustomField>