BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/CHECK_TRACKING_HISTORY__c.field-meta.xml
<CustomField>
    <fullName>CHECK_TRACKING_HISTORY__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Usato se viene tracciato su TrackingHistory__c</description>
    <inlineHelpText>Usato se viene tracciato su TrackingHistory__c</inlineHelpText>
    <label>CHECK TRACKING HISTORY</label>
    <type>Checkbox</type>
</CustomField>