BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/FIELD_AGGIUNTIVI__c.field-meta.xml
<CustomField>
    <fullName>FIELD_AGGIUNTIVI__c</fullName>
    <label>FIELD AGGIUNTIVI</label>
    <length>255</length>
    <type>Text</type>
</CustomField>