BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/FIELD_FORICON__c.field-meta.xml
<CustomField>
    <fullName>FIELD_FORICON__c</fullName>
    <label>FIELD_FORICON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>