BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/FIELDS_TO_SPLIT__c.field-meta.xml
<CustomField>
    <fullName>FIELDS_TO_SPLIT__c</fullName>
    <label>FIELDS TO SPLIT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>