BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/LOOK_UP_TO_RECORD__c.field-meta.xml
<CustomField>
    <fullName>LOOK_UP_TO_RECORD__c</fullName>
    <label>LOOK UP TO RECORD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>