BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/OBJECT_SUPPORT__c.field-meta.xml
<CustomField>
    <fullName>OBJECT_SUPPORT__c</fullName>
    <label>OBJECT SUPPORT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>