BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/OBJECT_TYPE__c.field-meta.xml
<CustomField>
    <fullName>OBJECT_TYPE__c</fullName>
    <label>OBJECT TYPE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>