BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/SOQL_WHERE_CONDITION__c.field-meta.xml
<CustomField>
    <fullName>SOQL_WHERE_CONDITION__c</fullName>
    <label>SOQL WHERE CONDITION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>