BPER/DEVF/force-app/main/default/objects/WGC_Storico_Attivita__mdt/fields/TIMING_DI_VISUALIZZAZIONE__c.field-meta.xml
<CustomField>
    <fullName>TIMING_DI_VISUALIZZAZIONE__c</fullName>
    <label>TIMING DI VISUALIZZAZIONE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>1</label>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>0.25</fullName>
            </value>
            <value>
                <fullName>0.5</fullName>
            </value>
            <value>
                <fullName>0.75</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>